crates/cuda-macros/tests/compile_fail/policy_contract_large_3d_block.stderr
error[E0080]: evaluation panicked: launch_contract exact block exceeds launch_bounds maximum threads
  --> tests/compile_fail/policy_contract_large_3d_block.rs:20:1
   |
20 | #[cuda_module]
   | ^^^^^^^^^^^^^^ evaluation of `<kernels::__configured_CudaKernel<PolicyWithFiniteLimit> as cuda_core::KernelLaunchContract>::SPEC` failed here

note: erroneous constant encountered
  --> tests/compile_fail/policy_contract_large_3d_block.rs:34:5
   |
34 |     <kernels::__configured_CudaKernel<PolicyWithFiniteLimit> as KernelLaunchContract>::SPEC;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
